# gjk-epa

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md
src/collision/: CircleDetector.cpp  CircleDetector.h  EPAMinkowskiPenetrationSolver.cpp  EPAMinkowskiPenetrationSolver.h  ExpandingSimplex.cpp  ExpandingSimplex.h  ExpandingSimplexEdge.h  GJKCollisionDetector.cpp  GJKCollisionDetector.h  MinkowskiSum.h  Penetration.h
src/geometry/: Circle.cpp  Circle.h  Convex.h  Polygon.cpp  Polygon.h  Triangle.h
src/math/: Dimension.h  Epsilon.cpp  Epsilon.h  Euler.h  Matrix22.h  Rectangle.cpp  Rectangle.h  Transform2.h  Vector.cpp  Vector.h  Vector2.h  Vector2Util.h
